--- a/baseapp/templates/baseapp/category/avtomatika-dlia-vorot-i-rollet.html
+++ b/baseapp/templates/baseapp/category/avtomatika-dlia-vorot-i-rollet.html
@@ -61,7 +61,7 @@
                         <!-- post-->
                         <article class="post single-post">
                             <div class="post-content fl-wrap">
-                                <h4 class="post-title">У нас вы можете заказать автоматику для различных видов ворот:</h4>
+                                <h4 class="post-title">У нас Вы можете заказать автоматику для различных видов ворот:</h4>
                                 <div class="clearfix"></div>
                                 <ol class="as-list-dot">
                                     <li class="as-li-left">Для секционных ворот. Производитель создал приборы двух видов: потолочные (серия Sectional) и вальные (серия Shaft). Приводы Sectional устанавливают в бытовых целях, когда масса полотна достигает 220 кг.</li>
@@ -80,9 +80,9 @@
                                     Мы предлагаем различные дополнения к автоматике:
                                 </p>
                                 <ol class="as-list-dot">
-                                    <li class="as-li-left">Блоки управления регулируют работу приводов</li>
-                                    <li class="as-li-left">Ключ-кнопки дают команды об открывании или закрывании ворот и шлагбаумов блокам управления</li>
-                                    <li class="as-li-left">Пульты дистанционного управления применяются для работы с оборудованием на расстоянии</li>
+                                    <li class="as-li-left">Блоки управления регулируют работу приводов.</li>
+                                    <li class="as-li-left">Ключ-кнопки дают команды об открывании или закрывании ворот и шлагбаумов блокам управления.</li>
+                                    <li class="as-li-left">Пульты дистанционного управления применяются для работы с оборудованием на расстоянии.</li>
                                     <li class="as-li-left">Светофоры повышают безопасность движения автотранспорта при въезде и выезде с огороженной территории.</li>
                                     <li class="as-li-left">Звуковые сигнализации предупреждают о движении ограждающей конструкции.</li>
                                     <li class="as-li-left">Приемники принимают сигналы от пульта дистанционного управления.</li>
