--- a/baseapp/templates/baseapp/category/kalitki.html
+++ b/baseapp/templates/baseapp/category/kalitki.html
@@ -88,7 +88,7 @@
                                 <div class="clearfix"></div>
                                 <ol class="as-list-dot">
                                     <li class="as-li-left">Эстетичный вид, более 100 вариантов дизайнерского исполнения</li>
-                                    <li class="as-li-left">Легкая и надежна конструкция из прочных и качественных материалов</li>
+                                    <li class="as-li-left">Легкая и надежная конструкция из прочных и качественных материалов</li>
                                     <li class="as-li-left">Высокая устойчивость металлических элементов к коррозии благодаря порошковому покрытию, соответствующему стандарту Qualicoat</li>
                                     <li class="as-li-left">Комплектация износостойкими алюминиевыми петлями с возможностью регулировки</li>
                                     <li class="as-li-left">Быстрый монтаж без дополнительного оборудования</li>
