--- a/baseapp/templates/baseapp/category/peregruzochnoe-oborudovanie.html
+++ b/baseapp/templates/baseapp/category/peregruzochnoe-oborudovanie.html
@@ -65,21 +65,21 @@
                                 <div class="clearfix"></div>
                                 <ol class="as-list-decimal">
                                     <li class="as-li-left">
-                                        Уравнительные платформы Применяются при погрузочно-разгрузочных работах, когда необходимо состыковать кузов грузовой машины с полом помещения. Бренд предлагает две разновидности:
+                                        Уравнительные платформы. Применяются при погрузочно-разгрузочных работах, когда необходимо состыковать кузов грузовой машины с полом помещения. Бренд предлагает две разновидности:
                                         <ol class="as-list-dot pl-3">
                                             <li class="as-li-left">механические</li>
                                             <li class="as-li-left">электрогидравлические с выдвижной или поворотной аппарелью</li>
                                         </ol>
                                     </li>
-                                    <li class="as-li-left">Мосты Востребованный вид складского перегрузочного оборудования. В ассортименте производителя есть два типа мостов — переносные и механические откидные</li>
+                                    <li class="as-li-left">Мосты. Востребованный вид складского перегрузочного оборудования. В ассортименте производителя есть два типа мостов — переносные и механические откидные</li>
                                     <li class="as-li-left">
-                                        Мобильные рампы Применяются на складах, где нет условий для эксплуатации мостов. С их помощью организовывается доступ автопогрузчика с поверхности пола 
+                                        Мобильные рампы. Применяются на складах, где нет условий для эксплуатации мостов. С их помощью организовывается доступ автопогрузчика с поверхности пола 
                                         к кузову грузовой машины. Мобильные рампы очень просты по назначению и эксплуатации, что позволяет работать с ними без специального обучения. 
                                         Они могут эксплуатироваться в довольно суровых погодных условиях, так как устойчивы к низким температурам.
                                     </li>
-                                    <li class="as-li-left">Тамбуры Данный вид перегрузочного оборудования ДорХан необходим для тех строений, где используются герметизаторы. С помощью такого тамбура осуществляется установка изделий.</li>
-                                    <li class="as-li-left">Выносные фермы Разработаны для взаимодействия со всеми типами уравнительных платформ. Заметно экономят пространство, так как используются в труднодоступных места.</li>
-                                    <li class="as-li-left">Подъемные столы Эксплуатируются на крупных производственных или складских помещениях, где требуется организация перемещения грузов вверх и вниз между разными уровнями.</li>
+                                    <li class="as-li-left">Тамбуры. Данный вид перегрузочного оборудования ДорХан необходим для тех строений, где используются герметизаторы. С помощью такого тамбура осуществляется установка изделий.</li>
+                                    <li class="as-li-left">Выносные фермы. Разработаны для взаимодействия со всеми типами уравнительных платформ. Заметно экономят пространство, так как используются в труднодоступных местах.</li>
+                                    <li class="as-li-left">Подъемные столы. Эксплуатируются на крупных производственных или складских помещениях, где требуется организация перемещения грузов вверх и вниз между разными уровнями.</li>
                                 </ol>
                                 <span class="fw-separator fl-wrap"></span>
                             </div>
