--- a/baseapp/templates/baseapp/category/rolvorota.html
+++ b/baseapp/templates/baseapp/category/rolvorota.html
@@ -78,7 +78,7 @@
                                     <li class="as-li-left">Октагональный вал RV102</li>
                                     <li class="as-li-left">Универсальная капсула KPU102</li>
                                     <li class="as-li-left">Подшипник BS32</li>
-                                    <li class="as-li-left">Профиль RHS75, RHS75P, RH77M, RHE56M, RHE56GM.</li>
+                                    <li class="as-li-left">Профиль RHS75, RHS75P, RH77M, RHE56M, RHE56GM</li>
                                 </ol>
                                 <p>
                                     Рольворота «Дорхан» являются долговечными и надежными.
@@ -101,7 +101,7 @@
                                 <ol class="as-list-dot">
                                     <li class="as-li-left">Рулонные ставни – это надежная защита от влаги, пыли, а также от злоумышленников. В отличии от обычных решеток рольставни не требуют постоянной покраски</li>
                                     <li class="as-li-left">Внешний вид конструкций легко дополнит дизайн любого строения</li>
-                                    <li class="as-li-left">Полотно рольворот складываются как в механическом, так и в автоматическом режимах</li>
+                                    <li class="as-li-left">Полотно рольворот складывается как в механическом, так и в автоматическом режимах</li>
                                     <li class="as-li-left">Цена на роллетные ворота рассчитывается персонально для каждого заказа. Доступная стоимость конструкций делает их востребованными для различного типа помещений, гаражей, окон</li>
                                     <li class="as-li-left">Современное экологичное решение, ведь все конструкции производятся не из дешевого недолговечного пластика, а из высокотехнологичных материалов и сплавов, а также стали и алюминия</li>
                                     <li class="as-li-left">Автоматические ставни используются для любых оконных, дверных и гаражных проемов</li>
