--- a/baseapp/templates/baseapp/category/shlagbaum.html
+++ b/baseapp/templates/baseapp/category/shlagbaum.html
@@ -76,7 +76,7 @@
                                     Продукцию ДорХан снабжают балансировочными пружинами. Если длина стрелы составляет более 4 м, устойчивость комплекта увеличивается. Стрелу 
                                     производят из прочного алюминия, затем дополняют ребрами жесткости. Чтобы защитить конструкцию от ветра, инженеры предусматривают скругленные 
                                     грани. Как правило, длина стрелы составляет 3–6 м. Внутри стойки можно поместить вентилятор. Автоматические шлагбаумы марки DoorHan мягко 
-                                    останавливается в любом крайнем положении. Это возможно даже тогда, когда скорость работы техники остается высокой. Нагрузка распределяется 
+                                    останавливаются в любом крайнем положении. Это возможно даже тогда, когда скорость работы техники остается высокой. Нагрузка распределяется 
                                     равномерно благодаря используемым шестеренкам. Также производителем предусмотрена возможность ручного управления при помощи встроенного 
                                     расцепителя.
                                 </p>
