--- a/baseapp/templates/baseapp/category/ulichnye-vorota.html
+++ b/baseapp/templates/baseapp/category/ulichnye-vorota.html
@@ -67,7 +67,7 @@
                                     <li class="as-li-left">
                                         Откатные. При открывании их створки сдвигаются в сторону. В основе конструкции – алюминиевая рама, которую заполняют профлистом или сэндвич-панелями. 
                                         Металлический профиль обеспечивает легкость конструкций, многослойные панели – хорошую шумоизоляцию. Отказ от сварных швов на производстве помогает 
-                                        предотвратить коррозию системы. Существует набор стандартных цветов для ограждений этого вида: коричнево-красный, зеленый, коричневый. По вашему заказу будут использоваться другие оттенки
+                                        предотвратить коррозию системы. Существует набор стандартных цветов для ограждений этого вида: коричнево-красный, зеленый, коричневый. По вашему заказу будут использоваться другие оттенки.
                                     </li>
                                     <li class="as-li-left">
                                         Распашные. Створки их открываются внутрь либо наружу огражденной территории. В качестве наполнителя для алюминиевых рам используются сэндвич-панели.
