--- a/baseapp/templates/baseapp/services.html
+++ b/baseapp/templates/baseapp/services.html
@@ -37,8 +37,8 @@
                         <h3>Монтаж</h3>
                         <p>
                             Компания «АВР» предоставляет услуги населению города Белгорода по монтажу автоматических откатных, распашных, секционных ворот компании «Doorhan»
-                            и других производителей автоматики и ворот. Монтируем всю линейку продукции компании Дорхан от ворот до шлагбаумов и рольставен. Монтаж производят
-                            квалифицированные бригады монтажников с многолетним опытом при помощи профессионального оборудования. Выбирайте профессионалов и ваши ворота будут служить Вам долгое время.
+                            и других производителей автоматики и ворот. Монтирует всю линейку продукции компании Дорхан от ворот до шлагбаумов и рольставень. Работу производят
+                            квалифицированные бригады монтажников с многолетним опытом при помощи профессионального оборудования. Выбирайте профессионалов и Ваши ворота будут служить Вам долгое время.
                         </p>
                     </div>
                 </div>
@@ -49,8 +49,8 @@
                     <div class="det-box-ietm det-box-ietm_single fl-wrap">
                         <h3>Ремонт</h3>
                         <p>
-                            Компания «АВР» осуществляем ремонт и обслуживание ворот, автоматики, систем и направляющих ворот. Сезонное обслуживание приводов автоматики и деталей
-                            управления воротами и другими механизмами защиты такими как шлагбаум. Вызов мастера в день поломки или запишитесь на удобную для Вас дату. Стоимость
+                            Компания «АВР» осуществляет ремонт и обслуживание ворот, автоматики, систем и направляющих ворот, сезонное обслуживание приводов автоматики и деталей
+                            управления воротами и другими механизмами защиты такими как шлагбаум. Вызовите мастера в день поломки или запишитесь на удобную для Вас дату. Стоимость
                             работ напрямую зависит от сложности поломки механизмов. Большинство запчастей и модулей в наличии на собственных складах.
                         </p>
                     </div>
@@ -69,7 +69,7 @@
                         </p>
                         <div class="det-list fl-wrap">
                             <ul>
-                                <li>Стоимость выезда специалиста на замер <span>БЕСПЛАТНО!</span></li>
+                                <li>Выезд специалиста на замер <span>БЕСПЛАТНО!</span></li>
                             </ul>
                         </div>
                     </div>
