--- a/baseapp/templates/baseapp/about.html
+++ b/baseapp/templates/baseapp/about.html
@@ -51,7 +51,7 @@
                 <div class="row">
                     <!--card item -->
                     <div class="col-md-4">
-                        <a class="content-inner fl-wrap" href="#">
+                        <div class="content-inner fl-wrap">
                             <div class="content-front">
                                 <div class="cf-inner">
                                     <div class="inner">
@@ -67,20 +67,20 @@
                                 </div>
                             </div>
                             <div class="content-back">
+                                <div class="bg" data-bg="{% static 'images/as_services/2.jpg' %}"></div>
                                 <div class="overlay"></div>
-
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <!--card item end -->
                     <!--card item -->
                     <div class="col-md-4">
-                        <a class="content-inner fl-wrap" href="serv-single.html">
+                        <div class="content-inner fl-wrap">
                             <div class="content-front">
                                 <div class="cf-inner">
                                     <div class="inner">
                                         <div class="dec-icon">
-                                            <i class="fal fa-truck-plow"></i>
+                                            <i class="fal fa-thumbs-up"></i>
                                         </div>
                                         <h2>Гарантии</h2>
                                         <p>
@@ -91,14 +91,15 @@
                                 </div>
                             </div>
                             <div class="content-back">
+                                <div class="bg" data-bg="{% static 'images/as_services/3.jpg' %}"></div>
                                 <div class="overlay"></div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <!--card item end -->
                     <!--card item -->
                     <div class="col-md-4">
-                        <a class="content-inner fl-wrap" href="serv-single.html">
+                        <div class="content-inner fl-wrap">
                             <div class="content-front">
                                 <div class="cf-inner">
                                     <div class="inner">
@@ -115,9 +116,10 @@
                                 </div>
                             </div>
                             <div class="content-back">
+                                <div class="bg" data-bg="{% static 'images/as_services/1.jpg' %}"></div>
                                 <div class="overlay"></div>
                             </div>
-                        </a>
+                        </div>
                     </div>
                     <!--card item end -->
                 </div>
@@ -136,14 +138,16 @@
                     </div>
                     <div class="about-wrap">
                         <p>
-                            ООО «АВР» - Основана в 2014 году. Специализируемся на продаже и установке автоматических ворота, секционных ворот, роль ставен, шлагбаумов, гаражных ворот на ручном и автоматическом приводе всех существующих на рынке России производителей. Являемся официальными представителями российского бренда Дорхан (Doorhan). Имеем опыт установки и обслуживания промышленных въездных автоматизированных систем. 
+                            ООО «АВР» - основана в 2014 году. Специализируется на продаже и установке автоматических ворот, секционных ворот, рольставень, шлагбаумов,
+                            гаражных ворот на ручном и автоматическом приводе всех существующих на рынке России производителей. Является официальным представителем
+                            российского бренда Дорхан (Doorhan). Имеем опыт установки и обслуживания промышленных въездных автоматизированных систем. 
                         </p>
                     </div>
                 </div>
                 <div class="col-md-1"></div>
                 <div class="col-md-6">
                     <div class="about-img fl-wrap">
-                        <img src="{% static 'images/folio/1.jpg' %}" class="respimg" alt="">
+                        <img src="{% static 'images/as_about/1.jpg' %}" class="respimg" alt="">
                         <div class="about-img-title ait_2 color-bg" data-scrollax="properties: { translateY: '100px' }">ООО "АВР"</div>
                     </div>
                     <div class="hero-counter_wrap darkbg_2">
@@ -185,6 +189,7 @@
                 </div>
             </div>
         </div>
+        <div class="sq-secdec"></div>
     </section>
     <section class="gray-bg  ">
         <div class="hex-bg"><span class="hex hex1"></span><span class="hex hex2"></span><span class="hex hex3"></span></div>
@@ -193,10 +198,13 @@
             <div class="row">
                 <div class="col-md-4">
                     <div class="section-title align-text">
-                        <h2>Почему Вы должны выбрать нас?</h2>
+                        <h2>Почему необходимо выбрать нас?</h2>
                         <div class="st-text fl-wrap">
                             <p>
-                                Учитывая то, что на рынке по установке автоматических ворота, роль ставен, гаражных ворот и автоматики в частности, большая конкуренция. Выделяем ряд преимуществ нашей компании перед конкурентами, которые служат своего рода устными гарантиями перед вами
+                                Компания «АВР» является официальным представителем в Белгородской области крупнейшего в России производителя ворот
+                                и автоматики компании «Doorhan». Сборка и монтаж, осуществляемые нашими монтажными бригадами, осуществляется строго 
+                                по регламенту компании Дорхан.  Постоянное обучение и повышение квалификации проходят наши бригады в обучающем центре Doorhan. 
+                                В работе придерживаемся регламенту компании и стремимся к высокому качеству монтажа автоматики, ворот и другой продукции компании.
                             </p>
                         </div>
                     </div>
@@ -204,7 +212,7 @@
                 <div class="col-md-8">
                     <div class="col-md-6">
                         <div class="card-item fl-wrap">
-                            <i class="fal fa-wind-turbine"></i>
+                            <i class="fal fa-ruble-sign"></i>
                             <span class="card-item_num">01.</span>
                             <h4>Цена</h4>
                             <p>Дилерские цены, без посредников и лишних накруток.</p>
@@ -212,7 +220,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card-item fl-wrap">
-                            <i class="fal fa-microchip"></i>
+                            <i class="fal fa-calendar-week"></i>
                             <span class="card-item_num">02.</span>
                             <h4>Контроль</h4>
                             <p>Строгий контроль выполнения работ по монтажу.</p>
@@ -220,7 +228,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card-item fl-wrap">
-                            <i class="fal fa-tools"></i>
+                            <i class="fal fa-thumbs-up"></i>
                             <span class="card-item_num">03.</span>
                             <h4>Гарантия</h4>
                             <p>Помимо заводской гарантии даём личную гарантию на монтажные работы.</p>
@@ -228,7 +236,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="card-item fl-wrap">
-                            <i class="fal fa-user-hard-hat"></i>
+                            <i class="fal fa-check-double"></i>
                             <span class="card-item_num">04.</span>
                             <h4>Обслуживание</h4>
                             <p>Выбрав нас, вы получаете бессрочное обслуживание установленной нами продукции.</p>
