--- a/baseapp/templates/baseapp/category/base_category.html
+++ b/baseapp/templates/baseapp/category/base_category.html
@@ -19,13 +19,13 @@
                                         <fieldset>
                                             <div class="row">
                                                 <div class="col-md-6">
-                                                    <input type="text" placeholder="Your Name *" value="" />
+                                                    <input type="text" placeholder="Ваше Имя *" value="" />
                                                 </div>
                                                 <div class="col-md-6">
-                                                    <input type="text" placeholder="Email Address*" value="" />
+                                                    <input type="text" placeholder="Email*" value="" />
                                                 </div>
                                             </div>
-                                            <textarea placeholder="Your Comment:"></textarea>
+                                            <textarea placeholder="Ваш комментарий:"></textarea>
                                         </fieldset>
                                         <button class="btn"><i class="fa fa-angle-right"></i><span>Задать вопрос</span></button>
                                     </form>
