--- a/baseapp/templates/baseapp/category/rolstavni.html
+++ b/baseapp/templates/baseapp/category/rolstavni.html
@@ -68,11 +68,11 @@
                                 <ol class="as-list-dot">
                                     <li class="as-li-left">Для дома, если использовать их в качестве гаражных ворот</li>
                                     <li class="as-li-left">Для торговой площадки или павильона</li>
-                                    <li class="as-li-left">для установки в промышленном здании или на производстве</li>
+                                    <li class="as-li-left">Для установки в промышленном здании или на производстве</li>
                                 </ol>
                                 <span class="fw-separator fl-wrap"></span>
                                 <p>
-                                    Мы предлагаем купить рольставни DOORHAN от проверенного производителя. Чтобы заказать их, можно оставить заявку на сайте или запросить обратный звонок, чтобы с вами связались наши специалисты.
+                                    Мы предлагаем купить рольставни DOORHAN от проверенного производителя. Для заказа можно оставить заявку на сайте или запросить обратный звонок, чтобы с Вами связались наши специалисты.
                                 </p>
                             </div>
                             <div class="post-content fl-wrap">
@@ -91,13 +91,13 @@
                                 <h4 class="post-title">От чего зависит стоимость роллет и рольставней DOORHAN</h4>
                                 <div class="clearfix"></div>
                                 <p>
-                                    Цена на конструкции рольставен зависит от материалов, размера и комплектации. Если в ваш заказ включена доставка и монтаж, они оплачиваются
+                                    Цена на конструкции рольставень зависит от материалов, размера и комплектации. Если в Ваш заказ включена доставка и монтаж, они оплачиваются
                                     отдельно. Рольставни «Дорхан» устанавливаются в проем, поэтому чем больше его площадь, тем выше будет стоимость.
                                     Ворота могут быть механическими или автоматическими. В первом случае их потребуется открывать и закрывать вручную.
                                     А во втором на роллеты будет установлен специальный привод с дистанционным управлением. Автоматизированные варианты будут стоить дороже.
                                     Другим фактором является материал, из которого сделаны рольставни. Цена на них варьируется в зависимости от вида профилей.
-                                    Для того чтобы рассчитать итоговую стоимость покупки, свяжитесь с нами. Специалисты помогут подобрать оптимальный размер роллет
-                                    и проконсультируют вас по поводу расценок.
+                                    Для того, чтобы рассчитать итоговую стоимость покупки, свяжитесь с нами. Специалисты помогут подобрать оптимальный размер роллет
+                                    и проконсультируют Вас по поводу расценок.
                                 </p>
                                 <span class="fw-separator fl-wrap"></span>
                             </div>
