--- a/baseapp/templates/baseapp/category/tekhnicheskie-dveri.html
+++ b/baseapp/templates/baseapp/category/tekhnicheskie-dveri.html
@@ -82,7 +82,7 @@
                                 <h4 class="post-title">Способы монтажа</h4>
                                 <div class="clearfix"></div>
                                 <p>
-                                    Накладной монтаж - один из самых распространенных способов монтажа технической двери ДорХан Иногда правила эвакуации предписывают 
+                                    Накладной монтаж - один из самых распространенных способов монтажа технической двери ДорХан. Иногда правила эвакуации предписывают 
                                     устанавливать дверную конструкцию так, чтобы она открывалась лишь внутрь помещения. Это позволяет сделать дверная коробка 
                                     внутреннего открывания. Изделие можно монтировать с возможностью открытия как во внутрь, так и наружу помещения, используя 
                                     дверную коробку для врезного монтажа. Это делает двери универсальными для использования на разных объектах в Белгороде , 
@@ -94,9 +94,9 @@
                                 <h4 class="post-title">Преимущества</h4>
                                 <div class="clearfix"></div>
                                 <ol class="as-list-dot">
-                                    <li class="as-li-left">Универсальная конструкция позволяет устанавливать технические двери ДорХан с правосторонним или левосторонним открыванием, она может быть с глухими полотном или остекленная. Это дает возможность использовать двери для школ, больниц, детских садов, а также промышленных и офисных помещений</li>
+                                    <li class="as-li-left">Универсальная конструкция позволяет устанавливать технические двери ДорХан с правосторонним или левосторонним открыванием, она может быть с глухим полотном или остекленная. Это дает возможность использовать двери для школ, больниц, детских садов, а также промышленных и офисных помещений</li>
                                     <li class="as-li-left">Компания-производитель изготавливает дверные блоки из высокотехнологичной стали, гарантирующей им прочность и долговечность</li>
-                                    <li class="as-li-left">Полотно усиленно профилями из стали, а замковая система снабжена надежным цилиндрическим механизмом</li>
+                                    <li class="as-li-left">Полотно усилено профилями из стали, а замковая система снабжена надежным цилиндрическим механизмом</li>
                                     <li class="as-li-left">Доступная цена на наши изделия в Белгороде делает их актуальными для покупки строительными организациями с малым бюджетом</li>
                                 </ol>
                                 <span class="fw-separator fl-wrap"></span>
