--- a/baseapp/templates/baseapp/calculator.html
+++ b/baseapp/templates/baseapp/calculator.html
@@ -31,7 +31,8 @@
             </div>
         </div>
     </div>
-    <div class="gray-bg small-top_padding stp-bot" id="calculator">
+    <div class="gray-bg stp-bot stp-top" id="calculator" style="text-align: -webkit-center">
+
     </div>
 
 
