--- a/baseapp/templates/baseapp/base.html
+++ b/baseapp/templates/baseapp/base.html
@@ -4,10 +4,9 @@
 <head>
 	<!--=============== basic  ===============-->
 	<meta charset="UTF-8">
-	<title>TheRoof - Construction Building Renovate Template</title>
-	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="" />
-	<meta name="description" content="" />
+	<title>{% block title %}{% endblock %}</title>
+	<meta name="keywords" content="{% block keywords %}{% endblock %}" />
+	<meta name="description" content="{% block description %}{% endblock %}" />
 	<!--=============== css  ===============-->
 	<link type="text/css" rel="stylesheet" href="{% static 'css/plugins.css' %}">
 	<link type="text/css" rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -145,12 +144,13 @@
 									<h4>Меню</h4>
 									<div class="footer-serv-holder">
 										<ul>
-											<li><a href="#">О компании</a></li>
+											<li><a href="{% url 'show_about' %}">О компании</a></li>
 											<li><a href="{% url 'show_private_client_page' %}">Частному клиенту</a></li>
 											<li><a href="{% url 'show_corporate_client_page' %}">Корпоративному клиенту</a></li>
-											<li><a href="#">Услуги</a></li>
-											<li><a href="#">Фото работ</a></li>
-											<li><a href="#">Контакты</a></li>
+											<li><a href="{% url 'show_services' %}">Услуги</a></li>
+											<li><a href="{% url 'show_portfolio' %}">Фото работ</a></li>
+											<li><a href="{% url 'show_contact' %}">Контакты</a></li>
+											<li><a href="{% url 'show_privacy_policy' %}">Политика конфиденциальности</a></li>
 										</ul>
 									</div>
 								</div>
