--- a/baseapp/templates/baseapp/category/base_category.html
+++ b/baseapp/templates/baseapp/category/base_category.html
@@ -2,6 +2,9 @@
 
 {% load static %}
 
+{% block title %}{% if category.meta_title %}{{ category.meta_title }}{% else %}{% endif %}{% endblock %}
+{% block keywords %}{% if category.meta_keywords %}{{ category.meta_keywords }}{% else %}{% endif %}{% endblock %}
+{% block description %}{% if category.meta_description %}{{ category.meta_description }}{% else %}{% endif %}{% endblock %}
 {% block content %}
 
 <section class="gray-bg stp-bot pt-0">
