--- a/baseapp/templates/baseapp/category/sektsionnye-vorota-dlia-garazha.html
+++ b/baseapp/templates/baseapp/category/sektsionnye-vorota-dlia-garazha.html
@@ -2,6 +2,10 @@
 
 {% load static %}
 
+{% block title %}{% if category.meta_title %}{{ category.meta_title }}{% else %}{% endif %}{% endblock %}
+{% block keywords %}{% if category.meta_keywords %}{{ category.meta_keywords }}{% else %}{% endif %}{% endblock %}
+{% block description %}{% if category.meta_description %}{{ category.meta_description }}{% else %}{% endif %}{% endblock %}
+
 {% block content %}
 <div class="content">
     <section class="no-padding" data-scrollax-parent="true">
