--- a/static/css/as-style.css
+++ b/static/css/as-style.css
@@ -1,5 +1,6 @@
 .as-list-decimal {
     list-style-type: decimal;
+    font-size: 16px;
 }
 
 .as-list-dot {
@@ -17,4 +18,24 @@
 
 .pl-3 {
     padding-left: 30px;
+}
+
+
+.as-policy-li-left {
+	text-align:left;
+	font-size:14px;
+	line-height:24px;
+	padding-bottom:10px;
+	font-weight: 500;
+ 	color: #5e646a;
+}
+
+.as-policy-list-dot {
+    list-style-type: disc;
+    padding-left: 2em;
+}
+
+.as-policy-list-num {
+    list-style-type: num;
+    padding-left: 2em;
 }
