--- a/baseapp/templates/baseapp/index.html
+++ b/baseapp/templates/baseapp/index.html
@@ -27,7 +27,7 @@
                                                         <div class="clearfix"></div>
                                                         <h4>c этим отлично справятся секционные ворота.</h4>
                                                         <div class="clearfix"></div>
-                                                        <a href="services.html" class="hc_btn color-bg"><span>Получить консультацию</span></a>
+                                                        <a href="#" class="hc_btn color-bg"><span>Получить консультацию</span></a>
                                                     </div>
                                                     <div class="hero-scroll-down-notifer  ">
                                                         <div class="scroll-down-wrap ">
@@ -54,7 +54,7 @@
                                                         <div class="clearfix"></div>
                                                         <h4>доставка, монтаж, пост гарантийное обслуживание.</h4>
                                                         <div class="clearfix"></div>
-                                                        <a href="portfolio-single.html" class="hc_btn color-bg"><span>Вызвать замерщика</span></a>
+                                                        <a href="#" class="hc_btn color-bg"><span>Вызвать замерщика</span></a>
                                                     </div>
                                                     <div class="hwt_dec" data-swiper-parallax="50%"></div>
                                                 </div>
@@ -73,7 +73,7 @@
                                                         <div class="clearfix"></div>
                                                         <h4>В наличии и под заказ автоматика всех ведущих производителей мира с гарантией.</h4>
                                                         <div class="clearfix"></div>
-                                                        <a href="shop.html" class="hc_btn color-bg"><span>Бесплатная консультация</span></a>
+                                                        <a href="#" class="hc_btn color-bg"><span>Бесплатная консультация</span></a>
                                                     </div>
                                                     <div class="hwt_dec" data-swiper-parallax="50%"></div>
                                                 </div>
@@ -87,12 +87,13 @@
                                             <div class="hero-wrap-title">
                                                 <div class="container">
                                                     <div class="hero-wrap-title_item fl-wrap">
-                                                        <h3>Автоматика</h3>
-                                                        <h2>Нужна <span>автоматика</span> на откатные <br> или распашные ворота?</h2>
+                                                        <h3>Рольставни</h3>
+
+                                                        <h2>Обеспечьте безопасность для дома и магазина</h2>
                                                         <div class="clearfix"></div>
-                                                        <h4>В наличии и под заказ автоматика всех ведущих производителей мира с гарантией.</h4>
+                                                        <h4>Надежные рольставни от производителя с монтажем.</h4>
                                                         <div class="clearfix"></div>
-                                                        <a href="shop.html" class="hc_btn color-bg"><span>Бесплатная консультация</span></a>
+                                                        <a href="#" class="hc_btn color-bg"><span>Бесплатная консультация</span></a>
                                                     </div>
                                                     <div class="hwt_dec" data-swiper-parallax="50%"></div>
                                                 </div>
@@ -151,7 +152,8 @@
                                             </div>
                                             <h2>Профессиональная команда</h2>
                                             <p>
-                                                Квалифицированный монтажный сервис. Опыт установки автоматических ворота более 10 лет. 
+                                                Качественный монтажный сервис. Опыт установки автоматических ворота более 8 лет.<br>
+                                                Три квалифицированных бригады.
                                             </p>
                                         </div>
                                         <div class="serv-num">01.</div>
@@ -305,7 +307,7 @@
             <div class="half-carousel-wrap">
                 <div class="half-carousel-title darkbg_2">
                     <div class="half-carousel-title-item fl-wrap">
-                        <h2>Наше портфоли</h2>
+                        <h2>Наше портфолио</h2>
                         <a href="{% url 'show_portfolio' %}" class="hc_btn color-bg"><span>Все проекты</span></a>
                     </div>
                     <div class="sec-dec"></div>
@@ -375,7 +377,9 @@
                                 <i class="fal fa-thumbs-up"></i>
                                 <span class="card-item_num">03.</span>
                                 <h4>Гарантия</h4>
-                                <p>Помимо заводской гарантии даём личную гарантию на монтажные работы.</p>
+                                <p>Помимо заводской гарантии даём личную гарантию на монтажные работы.<br>
+                                    Три специализированные бригады.
+                                </p>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -391,4 +395,6 @@
             </div>
         </section>
     </div>
+
+
 {% endblock %}
