--- a/baseapp/templates/baseapp/services.html
+++ b/baseapp/templates/baseapp/services.html
@@ -55,7 +55,8 @@
                         <p>
                             Компания «АВР» осуществляет ремонт и обслуживание ворот, автоматики, систем и направляющих ворот, сезонное обслуживание приводов автоматики и деталей
                             управления воротами и другими механизмами защиты такими как шлагбаум. Вызовите мастера в день поломки или запишитесь на удобную для Вас дату. Стоимость
-                            работ напрямую зависит от сложности поломки механизмов. Большинство запчастей и модулей в наличии на собственных складах.
+                            работ напрямую зависит от сложности поломки механизмов. Большинство запчастей и модулей в наличии на собственных складах.<br>
+                            Устранение неисправности в день обращения.
                         </p>
                     </div>
                 </div>
